# hawkop

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PLANNING.md  README.md  stackhawk-openapi.json
.claude/: context.md  settings.json
.claude/agents/: cli-review-agent.md
.claude/commands/: add-api.md  add-command.md  build.md  check-quality.md  lint.md  new-feature.md  pre-commit.md  test.md
.claude/context/: stackhawk-api.md
.claude/skills/cli-designer/: 12-factors.md  checklist.md  clig.md  patterns.md
.claude/skills/stackhawk-api-sherpa/: SKILL.md  api-quirks.md  dangerous-apis.md  stackhawk-api.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
docs/: CLI_DESIGN_PRINCIPLES.md  CLI_REFERENCE.md  ROADMAP.md
docs/plans/: 2025-11-09-hawkop-rust-design.md  2025-12-22-architectural-cleanup.md  2026-01-05-cached-client-design.md  2026-01-12-shell-completion-ordering.md
scripts/: check-test-coverage.sh  release.sh
scripts/hooks/: cli-change-guard.sh  feature-workflow-reminder.sh  session-freshness-check.sh  stop-quality-reminder.sh
src/: error.rs  main.rs
src/cache/: client.rs  key.rs  mod.rs  storage.rs
src/cli/: app.rs  audit.rs  cache.rs  completions.rs  config.rs  context.rs  env.rs  init.rs  mod.rs  oas.rs  org.rs  policy.rs  profile.rs  repo.rs  run.rs  scan.rs  secret.rs  status.rs  team.rs  user.rs
src/cli/args/: common.rs  filters.rs  global.rs  mod.rs  pagination.rs
src/cli/handlers/: list.rs  mod.rs
src/client/: fixtures.rs  mock.rs  mod.rs  pagination.rs  parallel.rs  rate_limit.rs  stackhawk.rs
src/client/api/: app.rs  auth.rs  config.rs  env.rs  listing.rs  mod.rs  oas.rs  perch.rs  repo.rs  scan_detail.rs  team.rs
src/client/models/: app.rs  audit.rs  auth.rs  config.rs  env.rs  finding.rs  mod.rs  oas.rs  org.rs  perch.rs  policy.rs  repo.rs  scan.rs  secret.rs  user.rs
src/config/: mod.rs
src/git/: mod.rs
src/models/: display.rs  mod.rs
src/models/display/: app.rs  audit.rs  common.rs  config.rs  env.rs  finding.rs  mod.rs  oas.rs  org.rs  policy.rs  repo.rs  run.rs  scan.rs  scan_full.rs  secret.rs  user.rs
src/output/: formatters.rs  json.rs  mod.rs  table.rs
tests/: cli.rs  functional.rs
tests/functional/: error_tests.rs  hosted_tests.rs  local_tests.rs  mod.rs  mutation_tests.rs  read_tests.rs
